Fix menu overlapping with popup

--- a/src/header/Header.scss
+++ b/src/header/Header.scss
@@ -201,6 +201,7 @@ $header-media-breakpoint: 800px;
   & :global(.Popover-tip) {
     fill: none;
   }
+  z-index: 5;
 }
 
 .networkIndicator {
